# wit

./: Makefile  README.md  bryant.conf  go.mod  go.sum  meson.build  wit.json
.github/workflows/: main.yml
cmd/: main.go  template.html
configs/: README.md  bryant.conf
serve/: core.go  template.html
